package refactoring_guru.command.example.commands;

import refactoring_guru.command.example.editor.Editor;

public class CopyCommand  {

    public CopyCommand(Editor editor) {

    }

}
