package refactoring_guru.command.example.commands;

import refactoring_guru.command.example.editor.Editor;

public class PasteCommand {

    public PasteCommand(Editor editor) {
    }

}
